Use Apache Commons String Utils to see if the string is empty.