@@ -1,5 +1,6 @@
 package org.broadinstitute.consent.http.rules;
 
+import org.apache.commons.lang3.StringUtils;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
 import org.broadinstitute.consent.http.models.DataAccessRequestData;
 import org.broadinstitute.consent.http.models.Dataset;
@@ -17,7 +18,7 @@ public class GeneralResearchUseV1 implements RuleImplementationInterface {
   private boolean isOnlyHMB(DataAccessRequestData data) {
     // Primary condition checks
     if (Boolean.TRUE.equals(data.getDiseases())) return false;
-    if (!data.getOtherText().isBlank()) return false;
+    if (!StringUtils.isBlank(data.getOtherText())) return false;
     if (Boolean.TRUE.equals(data.getOther())) return false;
 
     // Secondary condition checks, part 1
@@ -26,7 +27,7 @@ public class GeneralResearchUseV1 implements RuleImplementationInterface {
     if (Boolean.TRUE.equals(data.getForProfit())) return false;
 
     // Secondary condition checks, part 2
-    if (!data.getGender().isBlank() ) return false;
+    if (!StringUtils.isBlank(data.getGender())) return false;
     if (Boolean.TRUE.equals(data.getPediatric())) return false;
     if (Boolean.TRUE.equals(data.getVulnerablePopulation())) return false;
 
